--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 spring.application.name=app_academy
+# Configurações do banco de dados MySQL
+spring.datasource.url=jdbc:mysql://localhost:3306/app_academy
+spring.datasource.username=root
+spring.datasource.password=12345678a.
+
+# Configurações do driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Configurações de JPA/Hibernate (se estiver usando JPA)
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
